Added webpage practice for The Internet assignment

--- a/CSS/AboutPython/index.html
+++ b/CSS/AboutPython/index.html
@@ -99,7 +99,7 @@
                 <h4 class="no-decoration"><a href="#">Help and General Contact</a></h4>
                 <h4 class="no-decoration"><a href="#">Diversity Initiatives</a></h4>
                 <h4 class="no-decoration"><a href="#">Submit Website Bugs</a></h4>
-                <p>Copyright &Copy 2001-2016</p>
+                <p>Copyright &copy; 2001-2016</p>
             </div>
         </div> <!-- wrapper div close -->
     </body>
