--- a/JavaScript/AjaxAndAPIs/WeatherApp/index.html
+++ b/JavaScript/AjaxAndAPIs/WeatherApp/index.html
@@ -12,7 +12,7 @@
 <body>
     <div class="topbox">
         <form action="">
-            <input type="text" name="location" placeholder="City" class="textfield">
+            <input type="text" name="location" placeholder="Enter A City" class="textfield">
             <input type="submit" name="submit" value="Search Weather" class="button" v>
         </form>
     </div>
