--- a/JavaScript/IntroJavaScriptPractice/RockPaperScissors/index.html
+++ b/JavaScript/IntroJavaScriptPractice/RockPaperScissors/index.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Current Weather</title>
+    <title>Document</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="script.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="topbox">
-        <form action="">
-            <input type="text" name="location" placeholder="Enter A City" class="textfield">
-            <input type="submit" name="submit" value="Search Weather" class="button" v>
-        </form>
+    <div class="wrapper">
+        <h1>Let's Play Rock, Paper, Scissors!</h1>
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
     </div>
-    <div class="bottombox">
-        <h2>Check Today's Weather</h2>
-    </div>
+
 </body>
 </html>
